# memory-mcp-server

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  demo_search.py  memory_mcp_server_prd.md  pyproject.toml  store_project_state.py  test_memory_server.py
src/mcp_memory_server/: __init__.py  app_instance.py  main.py
src/mcp_memory_server/config/: __init__.py  settings.py
src/mcp_memory_server/embeddings/: __init__.py  embedding_provider_interface.py  ollama.py
src/mcp_memory_server/models/: __init__.py  memory.py
src/mcp_memory_server/services/: __init__.py  memory_service.py
src/mcp_memory_server/storage/: __init__.py  chroma.py  chroma_clean.py  storage_interface.py
src/mcp_memory_server/tools/: __init__.py  memory_tools.py
tests/: conftest.py
tests/integration/: test_memory_service.py
tests/unit/: test_main.py  test_memory_model.py  test_memory_service.py  test_memory_tools.py
tests/unit/test_config/: test_settings.py
tests/unit/test_embeddings/: test_embedding_provider_interface.py  test_ollama.py  test_ollama_provider.py
tests/unit/test_models/: test_memory.py
tests/unit/test_storage/: test_chroma.py  test_storage_interface.py
