[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-memory-server"
version = "0.1.0"
description = "MCP server for long-term memory storage and retrieval"
authors = [{name = "Lloyd Adams", email = "lloyd.adams@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastmcp==2.10.6",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "httpx==0.28.1",
    "numpy==2.3.2",
    "chromadb==1.0.15",
    "python-dotenv==1.1.1",
    "uuid7==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
    "black==25.1.0",
    "isort==5.13.2",
    "flake8==7.3.0",
    "mypy==1.17.0",
    "ruff==0.12.5",
]

[project.scripts]
mcp-memory-server = "mcp_memory_server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src/mcp_memory_server --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory_server"]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
]
